# lint-domain-packages

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: api.md  installation.md  usage.md
lint_domain_packages/: __init__.py  analyzer.py  cli.py  config.py  grouper.py  interfaces.py
tests/: __init__.py  test_lint_domain_packages.py
